--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <script>
             let colorBtn = document.getElementById("btn");
             colorBtn.addEventListener("click", function() {
-            changeBackgroundColor("pink");
+            changeColor("blue");
             });
-            function changeBackgroundColor(color) {
+            function changeColor(newColor) {
                 let heading = document.getElementById("homework-heading");
                 heading.style.color = newColor;
             }
